# kocaptcha

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: cleanup.rs  generate_text.rs  generated_captchas_stat.rs  index.txt  main.rs  stats.rs
