[package]
name = "kocaptcha"
version = "0.1.0"
authors = ["Ekaterina Vaartis <vaartis@cock.li>"]
edition = "2018"

[dependencies]
font-loader = "0.7.0"
imageproc = "0.17.0"
image = "0.20.1"
rusttype = "0.7.3"
rand = "0.6.1"
rust-crypto = "^0.2"
actix-web = "0.7"

serde = "1.0.80"
serde_json = "1.0.33"
serde_derive = "1.0.80"

lazy_static = { version = "1.2.0", optional = true }

[features]
default = ["generated-captchas-stat"]
generated-captchas-stat = ["lazy_static"]